fixed coversion button

--- a/logincs.css
+++ b/logincs.css
@@ -6,6 +6,17 @@ body{
     
     
 }
+
+#press{
+    align-items: center;
+    margin: auto;
+    border-radius: 15%;
+    border: transparent;
+    background-color: rgb(103, 109, 107);
+    font-weight: bold; 
+    color: rgb(235, 236, 237);
+    font-size: 0.6em; 
+}
 .container{
     margin: 0 auto;
    align-self: center;
@@ -15,7 +26,7 @@ body{
     border-radius: 5%;
     position: relative;
     height: 29%;
-    width: 28%;
+    width: 15%;
     
 }
 
